<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="p.eleazar.com.ardblu.Information"
    android:orientation="vertical"
    android:background="#96D9D9">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/equipo_2"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/montse"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textSize="8pt"
        android:textColor="#00979C"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yo"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textSize="8pt"
        android:textColor="#00979C"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carlos"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textSize="8pt"
        android:textColor="#00979C"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gina"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textSize="8pt"
        android:textColor="#00979C"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luis"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textSize="8pt"
        android:textColor="#00979C"/>

    <Button
        android:id="@+id/btnregresar"
        android:layout_marginTop="18pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00979C"
        android:textColor="#FFFFFF"
        android:text="Regresar"
        android:textSize="9pt"/>
</LinearLayout>
