<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="p.eleazar.com.ardblu.SecondActivity"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="75pt"
        android:layout_height="75pt"
        android:src="@drawable/icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10pt"
        />


    <TextView
        android:id="@+id/txtOne"
        style="@style/Texto"
        android:layout_width="70pt"
        android:layout_height="wrap_content"
        android:text="@string/txt_1"
        android:layout_gravity="center_horizontal"/>

    <ToggleButton
        android:id="@+id/tglOne"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txtTwo"
        style="@style/Texto"
        android:layout_width="70pt"
        android:layout_height="wrap_content"
        android:text="@string/txt_2"
        android:layout_gravity="center_horizontal"/>

    <ToggleButton
        android:id="@+id/tglTwo"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txtThree"
        style="@style/Texto"
        android:layout_width="70pt"
        android:layout_height="wrap_content"
        android:text="@string/txt_3"
        android:layout_gravity="center_horizontal"/>

    <ToggleButton
        android:id="@+id/tglThree"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnDesactivar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_dis"
            />

        <Button
            android:id="@+id/tmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TEMPERATURA"
            android:layout_marginLeft="90dp"
            android:textSize="7pt"
            android:textColor="#038C8C"
            android:textStyle="bold"/>

    </LinearLayout>


</LinearLayout>
